src/objects/SMS__c.object
<CustomObject>
    <description>Case: This object is used by VF page for ad hoc SMS, Hidden for all users.</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SMS</relationshipLabel>
        <relationshipName>SMS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerName__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SMS(Dealer Name)</relationshipLabel>
        <relationshipName>SMS_Dealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_Preview__c</fullName>
        <label>SMS Preview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary Mobile</label>
        <type>Checkbox</type>
    </fields>
    <label>SMS</label>
    <nameField>
        <displayFormat>SMS-{0000}</displayFormat>
        <label>SMS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>